--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "devDependencies": {
     "angular": "^1.5.0",
+    "bootstrap": "^3.3.6",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
