--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "gulp-cssnano": "^2.1.1",
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.3"
+    "gulp-uglify": "^1.5.3",
+    "jquery": "^2.2.1"
   },
   "dependencies": {}
 }
